--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -22,7 +22,7 @@
 
 
             </a>
-            <div hidden id="myNav" class="overlay">
+            <div id="myNav" class="overlay">
 
                 <!-- Button to close the overlay navigation -->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -84,35 +84,16 @@
 
     <footer>
         <div class="footer-container">
-
-            <div class="row">
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-                <div class="col-4 footer-social">
-                    <a href="#" class="social-icon"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a>
-                    <a href="#" class="social-icon"><img src="./assets/images/github-logo.png" alt="GitHub"></a>
-                    <a href="#" class="social-icon"><img src="./assets/images/Discord.svg" alt="Discord"></a>
-                    <!-- Agrega más redes sociales si es necesario -->
-                </div>
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-            </div>
-
-            <img src="./assets/images/Logo.svg" alt="logo" class="footerlogo">
-
-
-            <div class="row links">
-                <div class="col-4">
-                    <a href="#">Acerca de nosotros</a>
-                </div>
-                <div class="col-4">
-                    <a href="#">Terminos y condiciones</a>
-                </div>
-                <div class="col-4">
-                    <a href="#">Contactanos</a>
-                </div>
+            <img src="./assets/img/Logo.svg" alt="logo" class="footerlogo">
+            <div class="divider"></div>
+            <br>
+            <div class="footer-social">
+                <a href="#" class="social-icon"><img src="./assets/img/icone-linkedin-ronde-grise.png"
+                        alt="LinkedIn"></a>
+                <a href="#" class="social-icon"><img src="./assets/img/icone-github-grise.png" alt="GitHub"></a>
+                <a href="#" class="social-icon"><img src="./assets/img/logo-discord-icone-png-gris.png"
+                        alt="Discord"></a>
+                <!-- Agrega más redes sociales si es necesario -->
             </div>
         </div>
     </footer>
