Se actualiza pagina sobre nosotros con footer

--- a/pages/sobreNosotros/index.html
+++ b/pages/sobreNosotros/index.html
@@ -180,16 +180,35 @@
 
     <footer>
         <div class="footer-container">
+
+            <div class="row">
+                <div class="col-4">
+                    <div class="divider"></div>
+                </div>
+                <div class="col-4 footer-social">
+                    <a href="#" class="social-icon"><img src="./assets/img/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#" class="social-icon"><img src="./assets/img/github-logo.png" alt="GitHub"></a>
+                    <a href="#" class="social-icon"><img src="./assets/img/Discord.svg" alt="Discord"></a>
+                    <!-- Agrega más redes sociales si es necesario -->
+                </div>
+                <div class="col-4">
+                    <div class="divider"></div>
+                </div>
+            </div>
+
             <img src="./assets/img/Logo.svg" alt="logo" class="footerlogo">
-            <div class="divider"></div>
-            <br>
-            <div class="footer-social">
-                <a href="#" class="social-icon"><img src="./assets/img/icone-linkedin-ronde-grise.png"
-                        alt="LinkedIn"></a>
-                <a href="#" class="social-icon"><img src="./assets/img/icone-github-grise.png" alt="GitHub"></a>
-                <a href="#" class="social-icon"><img src="./assets/img/logo-discord-icone-png-gris.png"
-                        alt="Discord"></a>
-                <!-- Agrega más redes sociales si es necesario -->
+
+
+            <div class="row links">
+                <div class="col-4">
+                    <a href="#">Acerca de nosotros</a>
+                </div>
+                <div class="col-4">
+                    <a href="#">Terminos y condiciones</a>
+                </div>
+                <div class="col-4">
+                    <a href="#">Contactanos</a>
+                </div>
             </div>
         </div>
     </footer>
