Se agrega el menu interactivo de juegos y logros con scroll horizontal

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -21,23 +21,55 @@
             <img src="../assets/images/Logo.svg" alt="logo" class="logo">
         </a>
 
-        <!-- Contenedor para la imagen de perfil -->
-        <div class="containerProfile">
-            <img src="../assets/images/perfil.jpg" alt="" class="perfil">
+        <!-- Contenedor para la imagen de perfil pequeña -->
+        <div class="containerProfile position-relative">
+            <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
+            <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
         </div>
+        
     </nav>
 
-    /* Personal info */
+    <!-- Personal info -->
     <div class="containerFondoPerfil">
         <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil">
     </div>
     <div class="container-FotoPerfil">
-        <img src="../assets/images/perfil.jpg" alt="">
+        <img src="../assets/images/perfil.jpg" alt="" class="border border-black">
     </div>
     <div class="container-Nickname">
         <h1 class="nickname">Nickname</h1>
     </div>
 
+
+    <div class="containerJuegosLogros">
+        <h1>
+            Juegos y Logros
+        </h1>
+        <div class="scrollmenu">
+            <ul class="menu">
+                <li>
+                    <img src="../assets/images/Warzone.jpg">
+                </li>
+                <li>
+                    <img src="../assets/images/Diablo.jpg">
+                </li>
+                <li>
+                    <img src="../assets/images/GTA.jpg">
+                </li>
+                <li>
+                    <img src="../assets/images/FIFA.jpg">
+                </li>
+                <li>
+                    <img src="../assets/images/Smash.jpg">
+                </li>
+                <li>
+                    <a href="../pages/JuegosLogros">
+                        <img src="../assets/images/ver mas.png" id="verMas">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
     <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
