--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="./assets/img/Mesa de trabajo 1 copia 8@2x.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./assets/styles.css" />
+    <link rel="stylesheet" href="../../assets/styles/styleAboutUs.css" />
 </head>
 
 
@@ -23,11 +23,11 @@
     <nav class="custom-navbar d-flex justify-content-between">
         <div class="containerlogo">
             <a class="navbar-brand" href="#"> </a>
-            <img id="logo" class="d-inline-block" src="./assets/img/Logo.svg" alt="LinkGameIn">
+            <img id="logo" class="d-inline-block" src="../assets/images/Logo.svg" alt="LinkGameIn">
         </div> <!--cierra primer div de container logo-->
 
         <div class="containerprofile">
-            <img src="./assets/img/WhatsApp Image 2023-09-28 at 6.13.50 PM.jpeg" alt="Perfil" id="profile-img">
+            <img src="../assets/images/WhatsApp Image 2023-09-28 at 6.13.50 PM.jpeg" alt="Perfil" id="profile-img">
             <div id="config-menu" class="config-menu">
                 <!-- elementos de menú de configuración -->
                 <ul>
@@ -56,10 +56,10 @@
         <div id="cardCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="6000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="card custom-card" style="max-width: 540px;">
+                    <div class="card custom-card">
                         <div class="row g-0">
                             <div class="col-sm-4 col-md-4">
-                                <img src="./assets/img/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
+                                <img src="../assets/images/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
                             </div>
                             <div class="col-sm-8 col-md-8">
                                 <div class="card-body">
@@ -78,10 +78,11 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="card custom-card" style="max-width: 540px;">
+                    <div class="card custom-card">
                         <div class="row g-0">
-                            <div class="col-sm-4 col-md-4">
-                                <img src="./assets/img/ale.png" class="img-fluid rounded-start w-100" alt="Alejandra">
+                            <div class="col-md-4 col-md-4">
+                                <img src="../assets/images/ale.png" class="img-fluid rounded-start w-100"
+                                    alt="Alejandra">
                             </div>
                             <div class="col-sm-8 col-md-8">
                                 <div class="card-body">
@@ -101,10 +102,10 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="card custom-card" style="max-width: 540px;">
-                        <div class="row g-0">
+                    <div class="card custom-card">
+                        <div class="row">
                             <div class="col-sm-4 col-md-4">
-                                <img src="./assets/img/alan.png" class="img-fluid rounded-start w-100" alt="Alan">
+                                <img src="../assets/images/alan.png" class="img-fluid rounded-start w-100" alt="Alan">
                             </div>
                             <div class="col-sm-8 col-md-8">
                                 <div class="card-body">
@@ -121,10 +122,10 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="card custom-card" style="max-width: 540px;">
-                        <div class="row g-0">
+                    <div class="card custom-card">
+                        <div class="row">
                             <div class="col-sm-4 col-md-4">
-                                <img src="./assets/img/Della.png" class="img-fluid rounded-start w-100"
+                                <img src="../assets/images/Della.png" class=" img-fluid rounded-start w-100"
                                     alt="Dellaneyra">
                             </div>
                             <div class="col-sm-8 col-md-8">
@@ -142,10 +143,11 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="card custom-card" style="max-width: 540px;">
-                        <div class="row g-0">
+                    <div class="card custom-card">
+                        <div class="row">
                             <div class="col-sm-4 col-md-4">
-                                <img src="./assets/img/brandon.png" class="img-fluid rounded-start w-100" alt="Brandon">
+                                <img src="../assets/images/brandon.png" class="img-fluid rounded-start w-100"
+                                    alt="Brandon">
                             </div>
                             <div class="col-sm-8 col-md-8">
                                 <div class="card-body">
@@ -164,10 +166,11 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="card custom-card" style="max-width: 540px;">
-                        <div class="row g-0">
+                    <div class="card custom-card">
+                        <div class="row ">
                             <div class="col-sm-4 col-md-4">
-                                <img src="./assets/img/alex.png" class="img-fluid rounded-start w-100" alt="Alejandro">
+                                <img src="../assets/images/alex.png" class="img-fluid rounded-start w-100"
+                                    alt="Alejandro">
                             </div>
                             <div class="col-sm-8 col-md-8">
                                 <div class="card-body">
@@ -182,8 +185,8 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="card custom-card" style="max-width: 540px;">
-                        <div class="row g-0">
+                    <div class="card custom-card">
+                        <div class="row ">
                             <div class="col-sm-4 col-md-4">
                                 <img src="#" class="img-fluid rounded-start w-100" alt="Dylan">
                             </div>
@@ -217,7 +220,7 @@
         <DIV class="row mb-4"> <!--Aqui empiezan las filas-->
 
             <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
-                <img id="mision" src="./assets/img/f.jpeg" alt="Misión">
+                <img id="mision" src="../assets/images/f.jpeg" alt="Misión">
             </div> <!--termina DIV de imagen-->
 
 
@@ -245,17 +248,14 @@
             </div> <!--termina DIV de texto-->
 
             <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
-                <img id="vision" src="./assets/img/IMG_20230921_231755 (1).png" alt="Visión">
+                <img id="vision" src="../assets/images/IMG_20230921_231755 (1).png" alt="Visión">
             </div> <!--termina DIV de imagen-->
 
 
         </div> <!--aqui termina otra fila-->
-
         <br>
 
     </div> <!--cierre de container-->
-
-
 
     <footer>
         <div class="footer-container">
@@ -265,9 +265,9 @@
                     <div class="divider"></div>
                 </div>
                 <div class="col-4 footer-social">
-                    <a href="#" class="social-icon"><img src="./assets/img/linkedin.png" alt="LinkedIn"></a>
-                    <a href="#" class="social-icon"><img src="./assets/img/github-logo.png" alt="GitHub"></a>
-                    <a href="#" class="social-icon"><img src="./assets/img/Discord.svg" alt="Discord"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
                     <!-- Agrega más redes sociales si es necesario -->
                 </div>
                 <div class="col-4">
@@ -275,7 +275,7 @@
                 </div>
             </div>
 
-            <img src="./assets/img/Logo.svg" alt="logo" class="footerlogo">
+            <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
 
 
             <div class="row links">
@@ -292,7 +292,7 @@
         </div>
     </footer>
 
-    <script src="./assets/scripts/scripts.js"></script>
+    <script src="../../assets/scripts/scriptsMenuNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
