--- a/pages/sobreNosotros/index.html
+++ b/pages/sobreNosotros/index.html
@@ -58,7 +58,7 @@
                 <div class="carousel-item active">
                     <div class="card custom-card" style="max-width: 540px;">
                         <div class="row g-0">
-                            <div class="col-sm-4 col-md-4">
+                            <div class="col-xsm-4 col-md-4">
                                 <img src="./assets/img/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
                             </div>
                             <div class="col-sm-8 col-md-8">
@@ -216,12 +216,12 @@
 
         <DIV class="row mb-4"> <!--Aqui empiezan las filas-->
 
-            <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
+            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
                 <img id="mision" src="./assets/img/f.jpeg" alt="Misión">
             </div> <!--termina DIV de imagen-->
 
 
-            <div class="col-sm-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
+            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
                 <h3>Misión</h3> <br>
                 <p class="p-mision">Unir a la comunidad gamer de todo el mundo y proporcionarles una plataforma
                     innovadora que les
@@ -236,7 +236,7 @@
 
         <DIV class="row mb-4"> <!--aqui empieza otra fila-->
 
-            <div class="col-sm-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
+            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
                 <h3>Visión</h3> <br>
                 <p class="p-vision">Ser una red social gamer líder a nivel global que une a los jugadores a la pasión
                     por los
@@ -244,7 +244,7 @@
                     gamer.</p>
             </div> <!--termina DIV de texto-->
 
-            <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
+            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
                 <img id="vision" src="./assets/img/IMG_20230921_231755 (1).png" alt="Visión">
             </div> <!--termina DIV de imagen-->
 
