--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="./assets/img/Mesa de trabajo 1 copia 8@2x.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../../assets/styles/styleAboutUs.css" />
+    <link rel="stylesheet" href="../assets/styles/styleAboutUs.css">
 </head>
 
 
@@ -58,13 +58,8 @@
                 <div class="carousel-item active">
                     <div class="card custom-card">
                         <div class="row g-0">
-<<<<<<< HEAD:pages/sobreNosotros/index.html
-                            <div class="col-xsm-4 col-md-4">
-                                <img src="./assets/img/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
-=======
                             <div class="col-sm-4 col-md-4">
                                 <img src="../assets/images/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
->>>>>>> 78483cfc18d3e526fd5deac6adf5b8c1dee2e761:pages/AboutUs.html
                             </div>
                             <div class="col-sm-8 col-md-8">
                                 <div class="card-body">
@@ -224,13 +219,8 @@
 
         <DIV class="row mb-4"> <!--Aqui empiezan las filas-->
 
-<<<<<<< HEAD:pages/sobreNosotros/index.html
-            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
-                <img id="mision" src="./assets/img/f.jpeg" alt="Misión">
-=======
             <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
                 <img id="mision" src="../assets/images/f.jpeg" alt="Misión">
->>>>>>> 78483cfc18d3e526fd5deac6adf5b8c1dee2e761:pages/AboutUs.html
             </div> <!--termina DIV de imagen-->
 
 
@@ -257,13 +247,8 @@
                     gamer.</p>
             </div> <!--termina DIV de texto-->
 
-<<<<<<< HEAD:pages/sobreNosotros/index.html
-            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
-                <img id="vision" src="./assets/img/IMG_20230921_231755 (1).png" alt="Visión">
-=======
             <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
                 <img id="vision" src="../assets/images/IMG_20230921_231755 (1).png" alt="Visión">
->>>>>>> 78483cfc18d3e526fd5deac6adf5b8c1dee2e761:pages/AboutUs.html
             </div> <!--termina DIV de imagen-->
 
 
