Landing page format

--- a/index.html
+++ b/index.html
@@ -46,15 +46,83 @@
 
 
 
+    <div class="TextosLanding">
+        <p><span class="p1"><span class="link">LINK</span>ing </span> <span class="p2"> <span
+                    class="game">GAME</span>rs</span> <span class="p3">to success</span></p>
+        <div class="textosFBlanco">
 
-    <div class="card">
-        <img src="./assets/img/alex.png" class="card-img-top" alt="" />
-        <div class="card-body d-flex flex-column">
-            <div><img src="./assets/images/usuario.png" alt="" srcset=""></div>
-            <h5 class="card-title">Alejandro Camarillo</h5>
-            <p class="card-text">Contenido de la tarjeta 2.</p>
+            <h2>LinkGameIn</h2>
+            <p>Comparte, juega y contecta. <br>De gamers para gamers. <br>Unete a la comunidad de gamers mas chambeadora
+            </p>
         </div>
     </div>
+
+    <div class="card">
+        <div class="card-body d-flex flex-column">
+            <div class="containerprofile d-flex"><img src="./assets/images/slphaatheris.jpg" alt="" srcset=""
+                    id="profile-img">
+                <div>
+                    <h4>Alpha Atheris</h4>
+                    <p>LOL Esports</p>
+                </div>
+            </div>
+            <div class="content-card ">
+                <p>Torneo de nacional de #LOL en #ArenaCDMX
+                    #AlphaAtheris #LATAM #Esports</p>
+
+                <img src="./assets/images/publiesports.jpg" alt="" srcset="">
+            </div>
+            <div class="social-icon"><img src="./assets/images/like.png" alt="">
+                <img src="./assets/images/comment.png" alt="">
+                <img src="./assets/images/share.svg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-body d-flex flex-column">
+            <div class="containerprofile d-flex"><img src="./assets/images/timbers.png" alt="" srcset=""
+                    id="profile-img">
+                <div>
+                    <h4>NoSoyTimbers</h4>
+                    <p>Fortnite Esports</p>
+                </div>
+            </div>
+            <div class="content-card ">
+                <p>Demos la bienvenida al team #Timbers a nuestro nuevo compañero @NoSoyJelty
+                    #Fortnite #Esports</p>
+
+                <img src="./assets/images/Jelty.jpg" alt="" srcset="">
+            </div>
+            <div class="social-icon"><img src="./assets/images/like.png" alt="">
+                <img src="./assets/images/comment.png" alt="">
+                <img src="./assets/images/share.svg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-body d-flex flex-column">
+            <div class="containerprofile d-flex"><img src="./assets/images/elded.jpg" alt="" srcset="" id="profile-img">
+                <div>
+                    <h4>NoSoy_elded</h4>
+                    <p>Twitch Streamer</p>
+                </div>
+            </div>
+            <div class="content-card ">
+                <p>Me encantó el mix de “Ya llegó @elded”
+                    https://www.youtube.com/watch?v=CR4wT5gvbxE
+                    #IraPues</p>
+
+                <img src="./assets/images/miselded.jpg" alt="" srcset="">
+            </div>
+            <div class="social-icon"><img src="./assets/images/like.png" alt="">
+                <img src="./assets/images/comment.png" alt="">
+                <img src="./assets/images/share.svg" alt="">
+            </div>
+        </div>
+    </div>
+
+
+
 
 
     <footer>
