--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -80,7 +80,7 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row g-0">
-                            <div class="col-md-4 col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <img src="../assets/images/ale.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandra">
                             </div>
