fix: :fire: Remove trash page of profile styles

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -10,7 +10,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <!-- Hoja de estilos local -->
-    <link rel="stylesheet" href="../assets/styles/styles.css">
+    <link rel="stylesheet" href="../assets/styles/stylesProfile.css">
 </head>
 <body>
 
@@ -33,41 +33,138 @@
     <div class="containerFondoPerfil">
         <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil">
     </div>
-    <div class="container-FotoPerfil">
-        <img src="../assets/images/perfil.jpg" alt="" class="border border-black">
+    <div class="containerFotoPerfil">
+        <img src="../assets/images/perfil.jpg" alt="">
     </div>
-    <div class="container-Nickname">
-        <h1 class="nickname">Nickname</h1>
-    </div>
-
-
-    <div class="containerJuegosLogros">
-        <h1>
-            Juegos y Logros
+    <div class="containerNickname">
+        <h1 class="nickname">
+            Nickname
         </h1>
-        <div class="scrollmenu">
-            <ul class="menu">
-                <li>
-                    <img src="../assets/images/Warzone.jpg">
-                </li>
-                <li>
-                    <img src="../assets/images/Diablo.jpg">
-                </li>
-                <li>
-                    <img src="../assets/images/GTA.jpg">
-                </li>
-                <li>
-                    <img src="../assets/images/FIFA.jpg">
-                </li>
-                <li>
-                    <img src="../assets/images/Smash.jpg">
-                </li>
-                <li>
-                    <a href="../pages/JuegosLogros">
-                        <img src="../assets/images/ver mas.png" id="verMas">
-                    </a>
-                </li>
-            </ul>
+    </div>
+
+    <div class="row">
+        <div class="col-xl-6"> <!-- Columna izquierda -->
+            <div class="row">
+                <div class="containerJuegosLogros">
+                    <h2>
+                        Juegos y Logros
+                    </h2>
+                    <div class="scrollmenu scrollMenuJuegos">
+                        <ul class="menu menuJuegos">
+                            <li>
+                                <div class="containerJuego">
+                                    <div class="row">
+                                        <img src="../assets/images/Warzone.jpg" class="juego">
+                                    </div>
+                                    <div class="row containerLogros">
+                                        <img src="../assets/images/logroTimeGold.jpg" class="logro">
+                                        <img src="../assets/images/logroCoop.jpg" class="logro">
+                                        <img src="../assets/images/logroPC.jpg" class="logro">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="containerJuego">
+                                    <div class="row">
+                                        <img src="../assets/images/Diablo.jpg" class="juego">
+                                    </div>
+                                    <div class="row containerLogros">
+                                        <img src="../assets/images/logroTimeGold.jpg" class="logro">
+                                        <img src="../assets/images/logroCoop.jpg" class="logro">
+                                        <img src="../assets/images/logroPC.jpg" class="logro">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="containerJuego">
+                                    <div class="row">
+                                        <img src="../assets/images/GTA.jpg" class="juego">
+                                    </div>
+                                    <div class="row containerLogros">
+                                        <img src="../assets/images/logroTimeGold.jpg" class="logro">
+                                        <img src="../assets/images/logroCoop.jpg" class="logro">
+                                        <img src="../assets/images/logroPC.jpg" class="logro">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="containerJuego">
+                                    <div class="row">
+                                        <img src="../assets/images/FIFA.jpg" class="juego">
+                                    </div>
+                                    <div class="row containerLogros">
+                                        <img src="../assets/images/logroTimeGold.jpg" class="logro">
+                                        <img src="../assets/images/logroCoop.jpg" class="logro">
+                                        <img src="../assets/images/logroPC.jpg" class="logro">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="containerJuego">
+                                    <div class="row">
+                                        <img src="../assets/images/Smash.jpg" class="juego">
+                                    </div>
+                                    <div class="row containerLogros">
+                                        <img src="../assets/images/logroTimeGold.jpg" class="logro">
+                                        <img src="../assets/images/logroCoop.jpg" class="logro">
+                                        <img src="../assets/images/logroPC.jpg" class="logro">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="containerJuego">
+                                    <a href="../pages/JuegosLogros">
+                                        <img src="../assets/images/ver mas.png" id="verMasJuegos">
+                                    </a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="containerAmigos">
+                    <h2>
+                        Amigos
+                    </h2>
+                    <div class="scrollmenu scrollMenuAmigos">
+                        <ul class="menu menuAmigos">
+                            <li>
+                                <img src="../assets/images/Friend1.jpg">
+                            </li>
+                            <li>
+                                <img src="../assets/images/Friend2.jpg">
+                            </li>
+                            <li>
+                                <img src="../assets/images/Friend3.jpg">
+                            </li>
+                            <li>
+                                <img src="../assets/images/Friend4.jpg">
+                            </li>
+                            <li>
+                                <img src="../assets/images/Friend5.jpg">
+                            </li>
+                            <li>
+                                <img src="../assets/images/Friend6.jpg">
+                            </li>
+                            <li>
+                                <a href="../pages/JuegosLogros">
+                                    <img src="../assets/images/ver mas.png" id="verMasAmigos">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="col-xl-6"> <!-- Columna derecha -->
+            <div class="containerPubli">
+                <h3>
+                    Publica algo $Nickname...
+                </h3>
+                <img src="../assets/images/picture.png" alt="">
+            </div>
         </div>
     </div>
 
