Actualización de tarjetas

--- a/dashBoard.html
+++ b/dashBoard.html
@@ -26,13 +26,13 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <img src="/assets/images/Search.png" alt="logo rojo" class="logo" id="buscar">
+                    <img src="/assets/images/Search.png" alt="logo buscar" class="logo" id="buscar">
                 </button>
 
                 <!-- Vista colapsada de busqueda -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style=" margin-left: 400px;">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2 d-grid gap-2" type="search" placeholder="Buscar en LinkGameIn"
+                        <input class="form-control me-2" type="search" placeholder="Buscar en LinkGameIn"
                             aria-label="Search">
                         <button class="btn btn-outline-danger" type="submit">Buscar</button>
                     </form>
@@ -97,7 +97,7 @@
                 </div> <!-- Fin de barra superior para publicar -->
 
                 <!-- Zona de publicaciones -->
-                <div class="container">
+                <div class="container d-flex flex-column-flex justify-content-center align-items-center">
                     <div>
                         <div class="card" id="historias">
                             <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/gaming-flyer-design-template-d0db241e56497cd3212d9173a27294f8_screen.jpg?ts=1673690008"
