Actualizacion vista de menu y logo de perfil

--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -11,10 +11,10 @@
         rel="stylesheet" />
 
     <title>Acerca de nosotros</title>
-    <link rel="icon" href="./assets/img/Mesa de trabajo 1 copia 8@2x.png">
+    <link rel="icon" href="/LinkGameIn/assets/images/Mesa de trabajo 1 copia 8@2x.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/styles/styleAboutUs.css">
+    <link rel="stylesheet" href="/LinkGameIn/assets/styles/styleAboutUs.css">
 </head>
 
 
@@ -22,25 +22,29 @@
 
     <nav class="custom-navbar d-flex justify-content-between">
         <div class="containerlogo">
-            <a class="navbar-brand" href="#"> </a>
-            <img id="logo" class="d-inline-block" src="../assets/images/Logo.svg" alt="LinkGameIn">
+            <a class="navbar-brand" href="#">
+                <img id="logo" class="d-inline-block" src="../assets/images/Logo.svg" alt="LinkGameIn"> </a>
         </div> <!--cierra primer div de container logo-->
 
         <div class="containerprofile">
-            <img src="../assets/images/WhatsApp Image 2023-09-28 at 6.13.50 PM.jpeg" alt="Perfil" id="profile-img">
+            <img src="/LinkGameIn/assets/images/usuario.png" alt="Perfil" id="profile-img">
             <div id="config-menu" class="config-menu">
                 <!-- elementos de menú de configuración -->
                 <ul>
-                    <li><a href="#">Detalles de Perfil</a></li>
-                    <li><a href="#">Notificaciónes</a></li>
-                    <li><a href="#">Publicaciónes</a></li>
-                    <li><a href="#">Tus juegos</a></li>
-                    <li><a href="#">Logros</a></li>
-                    <hr>
-                    <li><a href="#">Cuenta y seguridad</a></li>
-                    <li><a href="#">About us</a></li>
+                    <!--    <li><a href="#">Detalles de Perfil</a></li> -->
+                    <!--    <li><a href="#">Notificaciónes</a></li> -->
+                    <!--     <li><a href="#">Publicaciónes</a></li> -->
+                    <!--     <li><a href="#">Tus juegos</a></li>  -->
+                    <!--     <li><a href="#">Logros</a></li> -->
+                    <!--    <hr> -->
+                    <!--    <li><a href="#">Cuenta y seguridad</a></li> -->
+                    <li><a href="#">Acerca de nosotros</a></li>
                     <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="#">Cerrar sesión</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                    <hr>
+                    <li><a href="#">Registrarse</a></li>
+                    <li><a href="#">Iniciar sesión</a></li>
+                    <!--     <li><a href="#">Cerrar sesión</a></li> -->
                     <!-- editar elementos del menu -->
                 </ul>
             </div> <!--cierra div de menu-->
@@ -53,15 +57,15 @@
     <!--Título de página-->
 
     <div class="container d-flex justify-content-center align-items-center">
-        <div id="cardCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="6000">
+        <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="6000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="card custom-card">
                         <div class="row g-0">
-                            <div class="col-sm-4 col-md-4">
+                            <div class="col-md-4">
                                 <img src="../assets/images/Aaron.png" class="img-fluid rounded-start w-100" alt="Aaron">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Aaron Silva</h5>
                                     <p class="card-text">Creo firmemente que la filosofia de aprendizaje constate es
@@ -80,11 +84,11 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row g-0">
-                            <div class="col-md-4 col-md-4">
+                            <div class=" col-md-4">
                                 <img src="../assets/images/ale.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandra">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Alejandra Mendieta</h5>
                                     <p class="card-text">Alto nivel de autonomía, empatía y responsabilidad social.
@@ -104,10 +108,10 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row">
-                            <div class="col-sm-4 col-md-4">
+                            <div class="col-md-4">
                                 <img src="../assets/images/alan.png" class="img-fluid rounded-start w-100" alt="Alan">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Alan Guzmán</h5>
                                     <p class="card-text">Desarrollador java fullstack, apasionado por el crecimiento
@@ -124,11 +128,11 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row">
-                            <div class="col-sm-4 col-md-4">
+                            <div class="col-md-4">
                                 <img src="../assets/images/Della.png" class=" img-fluid rounded-start w-100"
                                     alt="Dellaneyra">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class=" col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Dellaneyra Vazquez</h5>
                                     <p class="card-text">Siempre en búsqueda de nuevas oportunidades para adquirir
@@ -145,11 +149,11 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row">
-                            <div class="col-sm-4 col-md-4">
+                            <div class=" col-md-4">
                                 <img src="../assets/images/brandon.png" class="img-fluid rounded-start w-100"
                                     alt="Brandon">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class=" col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Brandon Palacios</h5>
                                     <p class="card-text">Mi pasión por el aprendizaje constante es una de las claves de
@@ -168,11 +172,11 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row ">
-                            <div class="col-sm-4 col-md-4">
+                            <div class=" col-md-4">
                                 <img src="../assets/images/alex.png" class="img-fluid rounded-start w-100"
                                     alt="Alejandro">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class=" col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Alejandro Camarillo</h5>
                                     <p class="card-text">Aún no hay contenido</p>
@@ -187,10 +191,10 @@
                 <div class="carousel-item">
                     <div class="card custom-card">
                         <div class="row ">
-                            <div class="col-sm-4 col-md-4">
+                            <div class=" col-md-4">
                                 <img src="#" class="img-fluid rounded-start w-100" alt="Dylan">
                             </div>
-                            <div class="col-sm-8 col-md-8">
+                            <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">Dylan Estarrón</h5>
                                     <p class="card-text">Aún no hay contenido</p>
@@ -219,12 +223,12 @@
 
         <DIV class="row mb-4"> <!--Aqui empiezan las filas-->
 
-            <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
-                <img id="mision" src="../assets/images/f.jpeg" alt="Misión">
+            <div class="col-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
+                <img id="mision" src="../assets/images/f.jpeg" class="img-fluid w-100" alt="Misión">
             </div> <!--termina DIV de imagen-->
 
 
-            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
+            <div class="col-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
                 <h3>Misión</h3> <br>
                 <p class="p-mision">Unir a la comunidad gamer de todo el mundo y proporcionarles una plataforma
                     innovadora que les
@@ -239,7 +243,7 @@
 
         <DIV class="row mb-4"> <!--aqui empieza otra fila-->
 
-            <div class="col-xsm-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
+            <div class="col-12 col-md-6 col-lg-6"> <!--comienza DIV de texto-->
                 <h3>Visión</h3> <br>
                 <p class="p-vision">Ser una red social gamer líder a nivel global que une a los jugadores a la pasión
                     por los
@@ -247,8 +251,9 @@
                     gamer.</p>
             </div> <!--termina DIV de texto-->
 
-            <div class="col-sm-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
-                <img id="vision" src="../assets/images/IMG_20230921_231755 (1).png" alt="Visión">
+            <div class="col-12 col-md-6 col-lg-6"> <!--DIV de imagen-->
+                <img id="vision" src="../assets/images/IMG_20230921_231755 (1).png" class="img-fluid w-100"
+                    alt="Visión">
             </div> <!--termina DIV de imagen-->
 
 
@@ -292,7 +297,7 @@
         </div>
     </footer>
 
-    <script src="../../assets/scripts/scriptsMenuNavbar.js"></script>
+    <script src="/LinkGameIn/assets/scripts/scriptsMenuNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
