--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-        <!-- Estilos de Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!-- Estilos de Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <!-- Hoja de estilos local -->
     <link rel="stylesheet" href="../assets/styles/stylesProfile.css">
 </head>
+
 <body>
 
     <!-- Barra de navegación -->
@@ -26,21 +28,21 @@
             <img src="../assets/images/perfil.jpg" alt="" class="border border-dark perfil">
             <span class="position-absolute bottom-0 start-0 p-2 bg-success border border-dark rounded-circle"></span>
         </div>
-        
+
     </nav>
 
     <!-- Personal info -->
-    <div class="containerFondoPerfil">
-        <img src="../assets/images/fondoPerfil.jpg" alt="" class="fondoPerfil">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="../assets/images/fondoPerfil.jpg" alt="Fondo de Perfil" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <img src="../assets/images/perfil.jpg" alt="Foto de Perfil" class="img-fluid">
+            </div>
+        </div>
     </div>
-    <div class="containerFotoPerfil">
-        <img src="../assets/images/perfil.jpg" alt="">
-    </div>
-    <div class="containerNickname">
-        <h1 class="nickname">
-            Nickname
-        </h1>
-    </div>
+
 
     <div class="row">
         <div class="col-xl-6"> <!-- Columna izquierda -->
@@ -156,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
         <div class="col-xl-6"> <!-- Columna derecha -->
             <div class="containerPubli">
@@ -170,8 +172,9 @@
 
     <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
